[package]
name = "recreation-gov"
version = "0.1.0"
authors = ["Matthew Kraai <kraai@ftbfs.org>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
